

option java_package = "igware.vplex.pb";
option java_outer_classname = "SharedCredentialTypes";

package vplex.sharedCredential;

message UserCredential {
    optional string user_name = 1;
    optional bytes ias_output = 2;
    // Do not reuse these field numbers:
    //optional bytes ans_session_key = 3;
    //optional bytes ans_login_blob = 4;
}

message DeviceCredential {
    optional fixed64 device_id = 1;
    optional bytes creds_clear = 2;
    optional bytes creds_secret = 3;
    optional bytes renewal_token = 4;
}